fix: Fix styling of nav elements on tablet and large view

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@ Credit: Eduardo Boucas
   background-color: #000000;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   #nav {
     height: 5rem;
   }
@@ -41,7 +41,16 @@ Credit: Eduardo Boucas
 
 #nav .nav-link {
   font-weight: 400;
+  font-size: 0.9rem !important;
   letter-spacing: 1px;
+  padding: 2px !important;
+}
+
+@media (min-width: 1025px) {
+  #nav .nav-link {
+    padding: 8px !important;
+    font-size: 1rem !important;
+  }
 }
 
 .dropdown-menu {
@@ -214,11 +223,12 @@ use:nth-child(5) {
   }
 }
 
-.search-term {
-  background-color: #f1e100;
-  padding: 4px;
-  padding-left: 8px;
-  padding-right: 8px;
+.btn_search-submit, .search-input {
+  border-radius: 0px;
+}
+
+.search-input {
+  width: 160px !important;
 }
 
 #try-again {
@@ -292,6 +302,7 @@ use:nth-child(5) {
 .nav__total {
   color: #DED92F !important;
   margin: 0px !important;
+  font-size: 0.9rem !important;
 }
 
 .nav__bag-indicator-circle {
@@ -309,7 +320,7 @@ use:nth-child(5) {
   margin-left: -30px !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .nav__bag-icon {
     margin-left: auto !important;
   }
